MIA-1023; Update local running instructions (#920)
* Create new doc with instructions on local running

* Create run-local.sh

* Remove auth and prison api services from docker-compose.yml

* Update application-local.yml

* Update README.md

* Move local running instructions to main README.md

* Update README.md